--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <p><strong>Возраст:</strong> 22</p>
         <p><strong>Контакты:</strong> 
             <a href="tel:89111998332">89111998332</a>, 
-            <a href="mailto:sedykh.danila27@gmail.com" >sedykh.danila27@gmail.com</a>, 
+            <a href="mailto:sedykh.danila27@gmail.com">sedykh.danila27@gmail.com</a>, 
             <a href="https://t.me/Master_Sedla" target="_blank">@Master_Sedla (Telegram)</a>
         </p>
     </div>
@@ -39,7 +39,7 @@
 
     <div class="section">
         <h2> Релевантный опыт работы</h2>
-        <p><strong>GitHub:</strong> <a href="https://github.com/MassterSedla" target="_blank">https://github.com/MassterSedla</a></p>
+        <p><strong>GitHub:</strong> <a href="https://github.com/MassterSedla" >https://github.com/MassterSedla</a></p>
         <h3><a href="твой линк" target="_blank">Командный проект:</a> </h3>
         <p><strong>Участники:</strong></p>
         <p><strong>Роль:</strong> </p>
